--- a/contato.html
+++ b/contato.html
@@ -32,7 +32,7 @@
         </form>
     </main>
     <footer>
-        <p>&copy; 2025 Site de Educação Física</p>
+        <p><strong>Desenvolvido por Maria Fernanda Pereira Oliveira Silva - IW1 - Etec Prof. Milton Gazzetti © 2025</strong></p>
     </footer>
 </body>
 </html>
