--- a/conteudo.html
+++ b/conteudo.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <h2>Conteúdos abordados</h2>
-        <img src="images/esportes.jpg" alt="Esportes" class="main-image">
+        <img src="images/imagem3.jpg" alt="Esportes" class="main-image">
         <ul>
             <li>História da Educação Física</li>
             <li>Componentes da Condição Física: Força, Velocidade, Resistência e Flexibilidade</li>
@@ -32,7 +32,7 @@
         <p>Estes são apenas alguns dos temas abordados na disciplina de Educação Física. A prática e o estudo dessa área são essenciais para o bem-estar físico e mental.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Site de Educação Física</p>
+        <p><strong>Desenvolvido por Maria Fernanda Pereira Oliveira Silva - IW1 - Etec Prof. Milton Gazzetti © 2025</strong></p>
     </footer>
 </body>
 </html>
