--- a/curiosidades.html
+++ b/curiosidades.html
@@ -21,6 +21,7 @@
     </header>
     <main>
         <h2>Você Sabia?</h2>
+        <img src="images/imagem3.jpg" alt="Esportes" class="main-image">
         <ul>
             <li>O esporte mais antigo conhecido é a luta, que remonta a 3000 a.C.</li>
             <li>A prática de atividades físicas pode aumentar a longevidade.</li>
@@ -30,7 +31,7 @@
         </ul>
     </main>
     <footer>
-        <p>&copy; 2025 Site de Educação Física</p>
+        <p><strong>Desenvolvido por Maria Fernanda Pereira Oliveira Silva - IW1 - Etec Prof. Milton Gazzetti © 2025</strong></p>
     </footer>
 </body>
 </html>
