--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </header>
     <main>
         <h2>Aprenda sobre a importância da Educação Física!</h2>
-        <img src="images/educacao_fisica.jpg" alt="Educação Física" class="main-image">
+        <img src="images/imagem1.png" alt="Educação Física" class="main-image">
         <p>A Educação Física é essencial para o desenvolvimento físico e mental dos alunos. Aqui você encontrará informações e curiosidades sobre essa disciplina.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Site de Educação Física</p>
+        <strong>Desenvolvido por Maria Fernanda Pereira Oliveira Silva - IW1 - Etec Prof. Milton Gazzetti © 2025</strong>
     </footer>
 </body>
 </html>
