--- a/sobre.html
+++ b/sobre.html
@@ -21,11 +21,11 @@
     </header>
     <main>
         <h2>O que é Educação Física?</h2>
-        <img src="images/historia.jpg" alt="História da Educação Física">
+        <img src="images/imagem2.jpg" alt="História da Educação Física">
         <p>A Educação Física é uma disciplina escolar que tem como objetivo promover o desenvolvimento físico, motor e cognitivo dos alunos. Ela busca melhorar a saúde, a capacidade de desempenho físico e a integração social dos estudantes por meio da prática de atividades físicas e esportivas.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Site de Educação Física</p>
+        <p><strong>Desenvolvido por Maria Fernanda Pereira Oliveira Silva - IW1 - Etec Prof. Milton Gazzetti © 2025</strong></p>
     </footer>
 </body>
 </html>
